--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "less-loader": "^2.2.3",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.0",
+    "vue-loader": "^11.0.0",
+    "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
     "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {
+    "vue": "^2.1.10"
   }
 }
