--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.0",
+    "style-loader": "^0.13.1",
     "vue-loader": "^11.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
