--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "gulp",
+    "watch": "gulp --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
