--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.1",
+    "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
@@ -29,6 +30,8 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
+    "foundation": "^4.2.1-1",
+    "jquery": "^3.2.1",
     "vue": "^2.1.10"
   }
 }
