--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
@@ -22,6 +23,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "node-sass": "^4.5.0",
+    "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.0",
     "style-loader": "^0.13.1",
     "vue-loader": "^11.0.0",
