--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "foundation": "^4.2.1-1",
     "jquery": "^3.2.1",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "vue-router": "^2.4.0"
   }
 }
