--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
-    "foundation": "^4.2.1-1",
+    "foundation-sites": "^6.3.1",
     "jquery": "^3.2.1",
     "vue": "^2.1.10",
     "vue-router": "^2.4.0"
