--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.0",
     "css-loader": "^0.28.1",
@@ -39,6 +40,7 @@
     "yargs": "^8.0.1"
   },
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "vue": "^2.3.2"
   },
   "browserslist": [
